--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ tr:nth-child(even){
 }
 
 tr:hover{
-  background-color: rgba(49, 3, 26, .25);
+  background-color: rgba(126, 8, 37, 0.25);
 }
 
 footer{
